--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,84 +4,56 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
-.about {
-  padding: 100px 0;
-  .about__item {
+body {
+  font-family: "Raleway", sans-serif;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 14px;
+  color: #fff;
+  min-height: 100vh;
+}
+.container {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 230px;
+}
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+.header {
+  padding: 50px 0;
+  background: url(../img/headerBG.png) no-repeat center/cover;
+  padding: 60px 0;
+  min-height: 1000px;
+  .header__nav {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    .about__pic {
-      max-width: 263px;
+    .header__list {
+      display: flex;
+      align-items: center;
+      margin-left: auto;
+      justify-content: space-between;
+      margin-right: 40px;
+    }
+    .header__signUp {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-width: 80px;
       width: 100%;
-      height: 250px;
-      overflow: hidden;
-      position: relative;
-      .about__overlay {
-        background: rgba(0, 0, 0, 0.493);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        padding-bottom: 20px;
-        opacity: 0;
-        transition: 0.5s;
-        a {
-          &:not(:last-child) {
-            margin-right: 10px;
-          }
-          i {
-            font-size: 20px;
-            color: #fff;
-          }
-        }
-      }
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: top;
-      }
-      &:hover {
-        .about__overlay {
-          opacity: 1;
-        }
-      }
-    }
-    h6 {
-      margin: 20px 0;
-    }
-  }
-}
-
-.card {
-  .card__item {
-    width: 30%;
-    height: 500px;
-    margin: 0 auto;
-    background: #fff;
-    .card__title {
-      padding: 50px 10px;
-      background: red;
-      position: relative;
-      overflow: hidden;
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: -17px;
-        transform: rotate(-5deg);
-        left: 0;
-        width: 110%;
-        height: 30px;
-        background: #fff;
-      }
-    }
-    .card__content {
-      padding: 20px;
+      min-height: 25px;
+      font-size: 13px;
+      color: #fff;
+      font-weight: 600;
+      border-radius: 2px;
+      border: 1px solid #fff;
+      text-decoration: none;
     }
   }
 }
