--- a/src/index.css
+++ b/src/index.css
@@ -5,107 +5,63 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-.about {
-  padding: 100px 0;
+body {
+  font-family: "Raleway", sans-serif;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 14px;
+  color: #fff;
+  min-height: 100vh;
 }
 
-.about .about__item {
+.container {
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 230px;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header {
+  padding: 50px 0;
+  background: url(../img/headerBG.png) no-repeat center/cover;
+  padding: 60px 0;
+  min-height: 1000px;
+}
+
+.header .header__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
 }
 
-.about .about__item .about__pic {
-  max-width: 263px;
-  width: 100%;
-  height: 250px;
-  overflow: hidden;
-  position: relative;
-}
-
-.about .about__item .about__pic .about__overlay {
-  background: rgba(0, 0, 0, 0.493);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.header .header__nav .header__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
-  padding-bottom: 20px;
-  opacity: 0;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-left: auto;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-right: 40px;
 }
 
-.about .about__item .about__pic .about__overlay a:not(:last-child) {
-  margin-right: 10px;
-}
-
-.about .about__item .about__pic .about__overlay a i {
-  font-size: 20px;
-  color: #fff;
-}
-
-.about .about__item .about__pic img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: top;
-  object-position: top;
-}
-
-.about .about__item .about__pic:hover .about__overlay {
-  opacity: 1;
-}
-
-.about .about__item h6 {
-  margin: 20px 0;
-}
-
-.card .card__item {
-  width: 30%;
-  height: 500px;
-  margin: 0 auto;
-  background: #fff;
-}
-
-.card .card__item .card__title {
-  padding: 50px 10px;
-  background: red;
-  position: relative;
-  overflow: hidden;
-}
-
-.card .card__item .card__title::after {
-  content: "";
-  position: absolute;
-  bottom: -17px;
-  -webkit-transform: rotate(-5deg);
-  transform: rotate(-5deg);
-  left: 0;
-  width: 110%;
-  height: 30px;
-  background: #fff;
-}
-
-.card .card__item .card__content {
-  padding: 20px;
+.header .header__nav li:not(:last-child) {
+  margin-right: 40px;
 }
