--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,9 +8,7 @@
 }
 body {
   font-family: "Raleway", sans-serif;
-  line-height: 1;
   font-weight: 600;
-  font-size: 14px;
   color: #fff;
   min-height: 100vh;
 }
@@ -27,7 +25,6 @@ a {
   text-decoration: none;
 }
 .header {
-  padding: 50px 0;
   background: url(../img/headerBG.png) no-repeat center/cover;
   padding: 60px 0;
   min-height: 1000px;
@@ -39,21 +36,36 @@ a {
       align-items: center;
       margin-left: auto;
       justify-content: space-between;
-      margin-right: 40px;
     }
-    .header__signUp {
+    .header__list li a {
+      margin-right: 40px;
+      color: #fff;
+      font-size: 17px;
+      line-height: 60px;
+      color: #ffffff;
+      text-align: right;
+      text-transform: uppercase;
+    }
+    .header__login {
+      max-width: 110px;
+      height: 55px;
+      border-radius: 10px;
+      background-color: #479ee1;
       display: flex;
       justify-content: center;
       align-items: center;
-      max-width: 80px;
       width: 100%;
       min-height: 25px;
-      font-size: 13px;
+      font-size: 17px;
       color: #fff;
-      font-weight: 600;
-      border-radius: 2px;
-      border: 1px solid #fff;
+      border: none;
       text-decoration: none;
+      text-transform: uppercase;
+      transition: 0.3s;
+      &:hover {
+        transform: scale(1.2);
+        transition: 0.3s;
+      }
     }
   }
 }
