--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,7 @@
 
 body {
   font-family: "Raleway", sans-serif;
-  line-height: 1;
   font-weight: 600;
-  font-size: 14px;
   color: #fff;
   min-height: 100vh;
 }
@@ -33,7 +31,6 @@ a {
 }
 
 .header {
-  padding: 50px 0;
   background: url(../img/headerBG.png) no-repeat center/cover;
   padding: 60px 0;
   min-height: 1000px;
@@ -59,9 +56,46 @@ a {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-right: 40px;
 }
 
-.header .header__nav li:not(:last-child) {
+.header .header__nav .header__list li a {
   margin-right: 40px;
+  color: #fff;
+  font-size: 17px;
+  line-height: 60px;
+  color: #ffffff;
+  text-align: right;
+  text-transform: uppercase;
+}
+
+.header .header__nav .header__login {
+  max-width: 110px;
+  height: 55px;
+  border-radius: 10px;
+  background-color: #479ee1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;
+  min-height: 25px;
+  font-size: 17px;
+  color: #fff;
+  border: none;
+  text-decoration: none;
+  text-transform: uppercase;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.header .header__nav .header__login:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
