--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,10 +13,10 @@ body {
   min-height: 100vh;
 }
 .container {
-  max-width: 1400px;
+  max-width: 1600px;
   width: 100%;
-  margin: 0 auto;
   padding: 0 230px;
+  margin: 0 auto;
 }
 h2 {
   font-family: "Roboto Slab", serif;
@@ -30,10 +30,29 @@ a {
 .header {
   background: url(../img/headerBG.png) no-repeat center/cover;
   padding: 60px 0;
-  min-height: 1000px;
+  position: relative;
+  .header__picHeadphones {
+    /*width: 40px;
+    height: 1px;*/
+    position: absolute;
+    top: -27px;
+    left: -416px;
+  }
+  .header__picEarphones {
+    position: absolute;
+    right: 0;
+    margin-top: 400px;
+  }
+  .header__picPencils {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
   .header__nav {
     display: flex;
     align-items: center;
+    justify-content: center;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.363);
     .header__list {
       display: flex;
       align-items: center;
@@ -53,7 +72,7 @@ a {
       max-width: 110px;
       height: 55px;
       border-radius: 10px;
-      background-color: #479ee1;
+      background-color: #479ee1b9;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -69,6 +88,67 @@ a {
         transform: scale(1.2);
         transition: 0.3s;
       }
+    }
+  }
+}
+.header__textContent {
+  display: flex;
+  /*position: relative;*/
+  /*.header__picEarphones {
+    position: absolute;
+    right: 0;
+    margin-top: 430px;
+  }*/
+}
+.header__text {
+  max-width: 535px;
+  width: 100%;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  h1 {
+    font-size: 40px;
+    color: #fffefe;
+    font-family: "Museo Slab";
+    margin-top: 300px;
+  }
+  p {
+    font-size: 26px;
+    color: #fefefe;
+    font-weight: 500;
+    margin-top: 40px;
+    margin-bottom: 80px;
+  }
+  .header__btns {
+    display: flex;
+    align-items: center;
+    margin-bottom: 200px;
+    .header__btn {
+      width: 240px;
+      height: 80px;
+      background-color: #479ee1b9;
+      border-radius: 10px;
+      box-shadow: 0 5px 2.5px rgba(0, 0, 0, 0.15);
+      font-size: 20px;
+      text-decoration: none;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 600;
+      border: none;
+      transition: 0.3s;
+      &:hover {
+        background-color: #fff;
+        color: #3e3e3e;
+        transition: 0.3s;
+      }
+    }
+    .header__btn:not(:last-child) {
+      margin-right: 30px;
+      display: flex;
+      justify-content: center;
     }
   }
 }
