--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
 h2 {
   font-family: "Roboto Slab", serif;
   font-size: 18px;
+  line-height: 24px;
   color: #7c7c7c;
   font-family: "Roboto Slab";
   font-weight: 400;
@@ -33,6 +34,7 @@ h2 {
 
 h3 {
   font-size: 24px;
+  letter-spacing: 2px;
   color: #494949;
   font-family: "Roboto Slab", serif;
   font-weight: 400;
@@ -183,6 +185,7 @@ a {
   font-weight: 500;
   margin-top: 40px;
   margin-bottom: 80px;
+  line-height: 40px;
 }
 
 .header__text .header__btns {
@@ -254,17 +257,45 @@ a {
   transform: translateX(-50%);
   width: 30px;
   height: 2px;
-  top: 65px;
+  top: 75px;
   background: rgba(0, 0, 0, 0.15);
   background-color: #2eb0ec;
 }
 
 .services .services__item {
-  margin-top: 80px;
+  margin-top: 90px;
+  margin-bottom: 160px;
+  text-align: center;
+  color: #7c7c7c;
+}
+
+.services .services__item .services__pic {
+  margin-bottom: 50px;
+  min-height: 110px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.services .services__item .services__pic:hover {
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .services .services__item .servises__subTitle {
   font-size: 18px;
   color: #494949;
   font-weight: 700;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.services .services__item p {
+  max-width: 310px;
+  width: 100%;
+  min-height: 82px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 26px;
 }
