--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   color: #fff;
-  min-height: 100vh;
 }
 
 .container {
@@ -40,6 +39,20 @@ h3 {
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
+  position: relative;
+}
+
+h3::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 30px;
+  height: 2px;
+  top: 50px;
+  background: rgba(0, 0, 0, 0.15);
+  background-color: #2eb0ec;
 }
 
 ul {
@@ -247,19 +260,17 @@ a {
 
 .services .services__title {
   position: relative;
-}
-
-.services .services__title::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: 30px;
-  height: 2px;
-  top: 75px;
-  background: rgba(0, 0, 0, 0.15);
-  background-color: #2eb0ec;
+  /*&::after {
+      content: "";
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 30px;
+      height: 2px;
+      top: 75px;
+      background: rgba(0, 0, 0, 0.15);
+      background-color: #2eb0ec;
+    }*/
 }
 
 .services .services__item {
@@ -298,4 +309,143 @@ a {
   font-size: 14px;
   font-weight: 500;
   line-height: 26px;
+}
+
+.unlimited {
+  padding: 35px 0;
+  background: url(../img/featuresBG.jpg) no-repeat center/cover;
+  position: relative;
+}
+
+.unlimited .unlimited__pic {
+  position: absolute;
+  left: -445px;
+  top: 120px;
+}
+
+.unlimited .unlimited__back {
+  position: absolute;
+  z-index: 0;
+}
+
+.unlimited .unlimited__title {
+  font-size: 22px;
+  color: #7c7c7c;
+  margin-top: 130px;
+  font-weight: 600;
+}
+
+.unlimited .unlimited__subtitle {
+  font-size: 32px;
+  color: #494949;
+}
+
+.unlimited .unlimited__text {
+  width: 540px;
+  height: 82px;
+  font-size: 20px;
+  line-height: 32px;
+  color: #7c7c7c;
+  font-weight: 500;
+}
+
+.unlimited .features {
+  margin: 25px 0 30px 0;
+}
+
+.unlimited .features__item {
+  padding-left: 40px;
+  line-height: 30px;
+  font-size: 14px;
+  color: #7c7c7c;
+  font-weight: 500;
+  position: relative;
+}
+
+.unlimited .features__item::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #66d4f4;
+  border: 5px solid #c8ebf5;
+  display: block;
+  left: 0;
+  top: 4px;
+  position: absolute;
+}
+
+.unlimited .unlimited__btn {
+  margin-bottom: 180px;
+}
+
+.unlimited .unlimited__btn .readMore__btn {
+  cursor: pointer;
+  width: 160px;
+  height: 50px;
+  font-size: 14px;
+  letter-spacing: 1px;
+  line-height: 50px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 25px;
+  border: none;
+  -webkit-box-shadow: 0 5px 2.5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 5px 2.5px rgba(0, 0, 0, 0.15);
+  background: #66d4f4;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.unlimited .unlimited__btn .readMore__btn:hover {
+  background-color: #fff;
+  color: #3e3e3e;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.other {
+  padding: 60px 0 120px 0;
+}
+
+.other .others__item {
+  margin-top: 120px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.other .others__title img {
+  margin-right: 25px;
+  max-width: 50px;
+  min-height: 50px;
+}
+
+.other .others__title h6 {
+  font-size: 18px;
+  color: #494949;
+  font-weight: 600;
+}
+
+.other .others__desc {
+  margin-top: 30px;
+  margin-left: 70px;
+  max-width: 261px;
+  width: 100%;
+  min-height: 113px;
+  font-size: 14px;
+  line-height: 26px;
+  color: #7c7c7c;
+  font-weight: 500;
 }
